Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6224167.out
T6224167.java:11:10: compiler.err.array.and.varargs: printf(java.lang.String,java.lang.Object...), printf(java.lang.String,java.lang.Object[]), T6224167
1 error
